<resources>
    <string name="app_name">oasis_five_task_StopWatch</string>
    <string name="zeros">00</string>
    <string name="colon">:</string>
    <string name="start_button">start button</string>
    <string name="pausebutton">pauseButton</string>
    <string name="stop_button">stop button</string>
    <string name="we_stoptimer">We StopTimer</string>
    <string name="epliced_time">Epliced Time:</string>
</resources>