<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/we_stoptimer"
        android:textAlignment="center"
        android:textSize="35sp"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_horizontal"
       android:layout_margin="12dp"
       >
       <TextView
           android:id="@+id/hour"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:autofillHints="00"

           android:text="@string/zeros"
           android:textAlignment="center"
           android:labelFor="@id/hour"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/colon"
           android:textSize="29sp"
           />
       <TextView
           android:id="@+id/minutes"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:text="@string/zeros"
           android:textAlignment="center"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/colon"
           android:textSize="29sp"
           />
       <TextView
           android:id="@+id/seconds"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:text="@string/zeros"
           android:textAlignment="center"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/startbtn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:contentDescription="@string/start_button"
            android:src="@drawable/round_start_24"
            android:padding="12dp"/>
        <ImageButton
            android:id="@+id/pausebtn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:contentDescription="@string/pausebutton"
            android:src="@drawable/baseline_pause_24"
            android:padding="12dp"/>
        <ImageButton
            android:id="@+id/stopbtn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:contentDescription="@string/stop_button"
            android:src="@drawable/baseline_stop_24"
            android:padding="12dp"/>


    </LinearLayout>
    <TextView
        android:id="@+id/timeEpliced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/epliced_time"/>
</LinearLayout>